--- a/style.css
+++ b/style.css
@@ -173,11 +173,11 @@ h1, h2 {
   border-radius: 50%;
   text-align: center;
   font-size: 30px;
-  box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
   z-index: 100;
   display: flex;
   align-items: center;
   justify-content: center;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.15); /* softer */
   transition: transform 0.2s ease-in-out;
 }
 
@@ -185,6 +185,7 @@ h1, h2 {
   transform: scale(1.1);
   background-color: #20bd5f;
 }
+
 
 
 /* Footer */
